@@ -76,6 +76,7 @@ int ltexturesLoadTextureFromImage( lua_State *L );
 int ltexturesLoadTextureCubemap( lua_State *L );
 int ltexturesLoadRenderTexture( lua_State *L );
 int ltexturesUnloadTexture( lua_State *L );
+int ltexturesIsTextureReady( lua_State *L );
 int ltexturesUpdateTexture( lua_State *L );
 int ltexturesUpdateTextureRec( lua_State *L );
 /* Texture Drawing. */
